--- a/css/index.css
+++ b/css/index.css
@@ -2,15 +2,19 @@
     font-family: "LubalGraph";
     src: url("fonts/LubalGraphMd.ttf");
 }
+@font-face {
+    font-family: "Sanchez";
+    src: url("fonts/Sanchez.ttf");
+}
 body{
 	background-color: #142228;
-	font-family: "LubalGraph";
+	font-family: "Sanchez";
 	color: white;
-	font-size: 20px;
+	font-size: 22px;
 }
 #wrapper{
 	padding-top: 25px;
-	width: 1000px;
+	width: 760px;
 	margin: 0 auto;
 	padding-bottom: 50px;
 }
@@ -42,6 +46,7 @@ h1{
     margin-right: 10px;
     text-align: center;
     width: 200px;
+    font-size: 20px;
 }
 p{
 	margin-bottom: -30px;
@@ -50,5 +55,5 @@ div.pink:hover{
 	background-color: #BA0081;
 }
 #htb{
-	width: 850px;
+	width: 760px;
 }
