--- a/css/index.css
+++ b/css/index.css
@@ -29,12 +29,14 @@ body{
 h1{
 	margin-top: 15px;
 	margin-bottom: 35px;
-	font-size: 47px;
+	font-size: 45px;
 	font-weight: normal;
+}
+#logos{
+	height: 130px;
 }
 #logos img{
 	margin-right: 70px;
-	height: 170px;
 }
 #btns{
 	margin-bottom: 75px;
@@ -44,9 +46,9 @@ h1{
     display: inline-block;
     height: 35px;
     line-height: 1.7;
-    margin-right: 10px;
+    margin-right: 15px;
     text-align: center;
-    width: 200px;
+    width: 205px;
     font-size: 20px;
 }
 div.about{
@@ -55,7 +57,7 @@ div.about{
 }
 p.org{
 	margin-top: 50px;
-	margin-bottom: -30px;
+	margin-bottom: 20px;
 }
 div.pink:hover{
 	background-color: #FC289B;
@@ -66,5 +68,6 @@ div.blue:hover{
 #htb{
 	width: 760px;
 }
-
-
+#l39, #tesobe{
+	padding-bottom: 20px;
+}
